Update dependencies (incl. bump to Java 20)